# conversation_editor

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
conversation_editor/: app.py  attribute_comparison_node.py  callbacks.py  constants.py  conversation.py  custom_types.py  shortcuts.py
conversation_editor/core/: attribute_comparison_node.py  talk_node.py
data/: conversation_example.json  conversation_schema.json
data/schemas/: attribute_comparison_node_schema.json  conversation_schema.json  talk_node_schema.json
tests/: json_test_data.py  test_core.py  test_json.py  test_schemas.py
