[tool.poetry]
name = "conversation-editor"
version = "0.1.0"
description = ""
authors = ["Ramon Meza <ramon_meza@live.com>"]
readme = "README.md"
packages = [{include = "conversation_editor"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
jsonschema = "^4.16.0"
dearpygui = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
